rnsc/test_data/rns_integration/error/parser/inner_name_sub_directive/missing_operand_recovers.rns
; Tests that parser continues after missing operand and reports subsequent errors
; Expected errors: E-020 (missing operand), E-037 (unexpected token)

.class public MyClass
.super java/lang/Object

.inner_classes_attr
    .inner_name

    unknown_token ; <- E-037
.inner_classes_attr_end

.class_end
